syntax = "proto3";
package cosmos.ibc.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/ibc/v1/ibc.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/ibc/types";

// Query provides defines the gRPC querier service.
service Query {
  // Params returns the total set of minting parameters.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/cosmos/ibc/v1/params";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1 [(gogoproto.nullable) = false];
}